clusters/homelab/apps/rust-booter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-booter
  namespace: rust-booter
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rust-booter
  template:
    metadata:
      labels:
        app: rust-booter
    spec:
      containers:
        - name: rust-booter
          image: ghcr.io/nerif-tafu/rust-booter:v1.0.8 # {"$imagepolicy": "flux-system:rust-booter"}
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: 8534
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8534
            initialDelaySeconds: 120
            periodSeconds: 30
            failureThreshold: 6
          ports:
            - containerPort: 8534
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: rust-booter-data
