clusters/homelab/apps/rust-booter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-booter
  namespace: rust-booter
spec:
  selector:
    app: rust-booter
  ports:
    - port: 80
      targetPort: 8534
